--- a/Product Management/Pages/Products/Index.cshtml
+++ b/Product Management/Pages/Products/Index.cshtml
@@ -3,51 +3,76 @@
 @{
 }
 
+<div class="container">
+     <a class="btn btn-secondary me-2 mt-4 mb-5" asp-page="/Products/AddProduct">Add Product</a>
+    <div class="row">
 
-<a class="btn btn-secondary me-2" asp-page="/Products/AddProduct">Add Product</a>
+        <table class="table mb-4">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Active</th>
+                    <th scope="col">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var product in Model.Products)
+                {
+                    <tr>
+                        <td>@product.Id</td>
+                        <td>@product.Name</td>
+                        <td>@product.Description</td>
+                        <td>@(product.IsActive ? "Yes" : "No")</td>
+                        <td>
+                            <div class="d-flex align-items-center">
+                                <a class="btn btn-success mb-2 me-2" asp-page="/Products/EditProduct" asp-page-handler="ProductById" asp-route-id="@product.Id">Edit</a>
+                                <form method="post" asp-page-handler="Delete" asp-route-id="@product.Id">
+                                    <input type="submit" value="Delete" class="btn btn-danger mb-2 ms-2" />
+                                </form>
+                            </div>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">ID</th> 
-            <th scope="col">Name</th>
-            <th scope="col">Description</th>
-            <th scope="col">Active</th>
-            <th scope="col">Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var product in Model.Products)
-        {
-            <tr>
-                <td>@product.Id</td>
-                <td>@product.Name</td>
-                <td>@product.Description</td>
-                <td>@(product.IsActive ? "Yes" : "No")</td>
-                <td>
-                    <div class="d-flex align-items-center">
-                        <a class="btn btn-success mb-2 me-2" asp-page="/Products/EditProduct" asp-page-handler="ProductById" asp-route-id = "@product.Id">Edit</a>
-                        <form method="post" asp-page-handler="Delete" asp-route-id="@product.Id">
-                            <input type="submit" value="Delete" class="btn btn-danger mb-2 ms-2" />
-                        </form>
-                    </div>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-<nav aria-label="Page navigation example">
-    <ul class="pagination">
+        @* <nav aria-label="Page navigation example">
+        <ul class="pagination">
         <li class="page-item"><a class="page-link" href="#">Previous</a></li>
         <li class="page-item"><a class="page-link" href="#">1</a></li>
         <li class="page-item"><a class="page-link" href="#">2</a></li>
         <li class="page-item"><a class="page-link" href="#">3</a></li>
         <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
-</nav>
+        </ul>
+        </nav> *@
 
-<div>
-    @* @Html.PagedListPager(Model.Products, page => Url.Page("/Products/Index", new { page })) *@
+
+
+        <nav aria-label="Page navigation example  ">
+            <ul class="pagination justify-content-center align-items-center mt-4 mb-4">
+               
+                <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : "")">
+                    <a class="page-link" asp-page="/Products/Index" asp-route-pageNumber="@(Model.CurrentPage - 1)">Previous</a>
+                </li>
+
+                @for (var i = 1; i <= Model.TotalPages; i++)
+                {
+                    <li class="page-item @(Model.CurrentPage == i ? "active" : "")">
+                        <a class="page-link" asp-page="/Products/Index" asp-route-pageNumber="@i">@i</a>
+                    </li>
+                }
+
+
+                <li class="page-item @(Model.CurrentPage == Model.TotalPages ? "disabled" : "")">
+                    <a class="page-link" asp-page="/Products/Index" asp-route-pageNumber="@(Model.CurrentPage + 1)">Next</a>
+                </li>
+     
+            </ul>
+        </nav>
+
+    </div>
 </div>
+
 
