--- a/Product Management/Pages/Clients/ClientDetails.cshtml
+++ b/Product Management/Pages/Clients/ClientDetails.cshtml
@@ -17,24 +17,35 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
+            <th>Product ID</th>
             <th>Product Name</th>
             <th>Description</th>
             <th>Is Active</th>
             <th>Start Date</th>
             <th>End Date</th>
             <th>License</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var product in Model.ClientVm.ClientProducts)
         {
             <tr>
+                <td>@product.ProductId</td>
                 <td>@product.ProductName</td>
                 <td>@product.ProductDescription</td>
                 <td>@(product.ProductIsActive ? "Yes" : "No")</td>
                 <td>@product.StartDate.ToShortDateString()</td>
                 <td>@(product.EndDate?.ToShortDateString() ?? "N/A")</td>
                 <td>@product.License</td>
+                <td class="">
+                    <form method="post" asp-page-handler="DeleteClientProduct" asp-route-productId="@product.ProductId" asp-route-clientId="@Model.ClientVm.Id">
+                        <input type="submit" value="Delete Product" class="btn btn-danger  mb-2" />
+                    </form>
+
+                    <a class="btn btn-success mt-2 mb-2 me-2" asp-page="/ClientProducts/EditClientProduct" asp-page-handler="EditClient" asp-route-productId="@product.ProductId" asp-route-clientId="@Model.ClientVm.Id">Edit Product</a>
+
+                </td>
             </tr>
         }
     </tbody>
