--- a/Product Management/Pages/Products/AddProduct.cshtml
+++ b/Product Management/Pages/Products/AddProduct.cshtml
@@ -14,19 +14,15 @@
                 @* <div asp-validation-summary="All" class="text-danger"></div> *@
                 <div class="form-group mt-2 me-2">
                     <label asp-for="ProductVm.Name" class="control-label"></label>
-                    <input asp-for="ProductVm.Name" data-val="true" data-val-maxlength-max="2" data-val-maxlength="The field Name must not exceed 2 chars" class="form-control" />
+                    <input asp-for="ProductVm.Name" data-val="true" data-val-maxlength-max="50" data-val-maxlength="The Product Name must not exceed 50 chars" class="form-control" />
                     <span asp-validation-for="ProductVm.Name" class="text-danger"></span>
                 </div>
                 <div class="form-group mt-2 me-2">
                     <label asp-for="ProductVm.Description" class="control-label"></label>
-                    <input asp-for="ProductVm.Description" class="form-control" />
+                    <input asp-for="ProductVm.Description" data-val="true" data-val-maxlength-max="150" data-val-maxlength="The Product Name must not exceed 150 chars"  class="form-control" />
                     <span asp-validation-for="ProductVm.Description" class="text-danger"></span>
                 </div>
-                @*  <div class="form-group form-check">
-                <label class="form-check-label">
-                <input class="form-check-input" asp-for="ProductVm.IsActive" /> @Html.DisplayNameFor(model => model.ProductVm.IsActive)
-                </label>
-                </div> *@
+              
 
                 <div class="form-group d-flex mt-3">
                     <label class="control-label me-3">Is Active</label>
